--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.2",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
