Added server testing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs: # the things being executed
    steps:
      - uses: actions/checkout@v4 # using version 4 of Actions
      - name: Install Dependencies
-       run: cd 'client' && npm install
+       run: cd 'client' && npm install && cd '../server' && npm install
      - name: Unit Test
-       run: cd 'client' && npm test # the actual testing line
+       run: cd 'client' && npm test && cd '../server' && npm test # the actual testing line
