--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,11 @@ jobs: # the things being executed
    runs-on: ubuntu-latest # which device on Github's server that you are running the Actions on
    steps:
      - uses: actions/checkout@v4 # using version 4 of Actions
-     - name: Install Dependencies
-       run: cd 'client' && npm install && cd '../server' && npm install
-     - name: Unit Test
-       run: cd 'client' && npm test && cd '../server' && npm test # the actual testing line
+     - name: Install Dependencies Client
+       run: cd 'client' && npm install
+     - name: Unit Test Client
+       run: cd 'client' && npm test
+     - name: Install Dependencies Server
+       run: cd '../server' && npm install
+     - name: Unit Test Server
+       run: cd '../server' && npm test
