--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs: # the things being executed
      - name: Unit Test Client
        run: cd 'client' && npm test
      - name: Install Dependencies Server
-       run: cd '../server' && npm install
+       run: cd 'server' && npm install
      - name: Unit Test Server
-       run: cd '../server' && npm test
+       run: cd 'server' && npm test
