--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest --forceExit --detectOpenHandles --watchAll --maxWorkers=1",
+    "test": "jest --forceExit --detectOpenHandles --maxWorkers=1",
     "start": "ts-node src/index.ts",
     "build": "tsc",
     "serve": "node dist/index.js"
