--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.1",
     "@types/sqlite3": "^3.1.11",
     "@types/uuid": "^10.0.0",
