--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "cd client && npm install && npm run build"
+  command = "cd client && npm install && npm start"
   publish = "client/build"
